@@ -43,8 +43,9 @@ Tuplet_number::print (SCM smob)
       me->suicide ();
       return SCM_EOL;
     }
-  
-  Stencil *stc = unsmob_stencil (Text_interface::print (smob));
+
+  SCM stc_scm = Text_interface::print (smob);
+  Stencil *stc = unsmob_stencil (stc_scm);
 
   stc->align_to (X_AXIS, CENTER);
   stc->align_to (Y_AXIS, CENTER);
@@ -56,7 +57,7 @@ Tuplet_number::print (SCM smob)
 
   stc->translate ((points[RIGHT] + points[LEFT]) / 2);
   
-  return stc->smobbed_copy ();
+  return stc_scm;
 }
 
 
