@@ -1,3 +1,8 @@
+2006-06-06  Joe Neeman  <joeneeman@gmail.com>
+
+	* lily/tuplet-number.cc (print): prevent stencil from being
+	garbage collected.
+
 2006-06-05  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* scm/stencil.scm (write-system-signature): explicitly 
